<resources>
    <string name="app_name">FORCA PoS</string>
    <string name="txt_logo">Logo</string>
    <string name="txt_username">Nama Pengguna</string>
    <string name="txt_password">Kata Sandi</string>
    <string name="txt_remember_me">Ingat Saya</string>
    <string name="txt_forget_password">Lupa Kata Sandi?</string>
    <string name="txt_login">Masuk</string>
    <string name="txt_sign_up">Daftar</string>
    <string name="txt_copyright">Ⓒ 2020 PT. SISI, All Rights Reserved.</string>
    <string name="txt_purchase">Penerimaan</string>
    <string name="txt_good_receive">Good Receive</string>
    <string name="txt_sale_list">Data Penjualan</string>
    <string name="txt_detail_sales_booking">Detail Penjualan</string>
    <string name="txt_pembayaran">Pembayaran</string>
    <string name="txt_pengiriman">Pengiriman</string>
    <string name="txt_account">Akun</string>
    <string name="txt_search_product">Cari Produk</string>
    <string name="txt_home">Beranda</string>
    <string name="txt_menu_sales_booking">Penjualan</string>
    <string name="txt_menu_purchase">Pembelian</string>
    <string name="txt_menu_master_data">Data</string>
    <string name="txt_menu_confirmation_delivery">Pengiriman</string>
    <string name="menu_search">Pencarian</string>
    <string name="txt_status_all">ALL</string>
    <string name="txt_status_pending">Menunggu</string>
    <string name="txt_status_confirmed">Dikonfirmasi</string>
    <string name="txt_status_reserved">Dipesan</string>
    <string name="txt_status_closed">Ditutup</string>
    <string name="txt_status_canceled">Dibatalkan</string>
    <string name="txt_status_partial">Sebagian</string>
    <string name="txt_status_due">Jatuh Tempo</string>
    <string name="txt_status_waiting">Menunggu</string>
    <string name="txt_status_paid">Lunas</string>
    <string name="txt_status_done">Selesai</string>
    <string name="txt_status_packing">Dikemas</string>
    <string name="txt_status_delivering">Mengirim</string>
    <string name="txt_status_delivered">Dikirim</string>
    <string name="txt_status_returned">Dikembalikan</string>
    <string name="txt_status_sent">Diantar</string>
    <string name="txt_status_completed">Selesai</string>
    <string name="txt_status_received">Diterima</string>
    <string name="txt_sales_booking">Sales Booking</string>
    <string name="choose_product">Pilih Product</string>
    <string name="txt_helper_product">Silahkan Pilih Product</string>
    <string name="txt_title_detail_good_receive">Rincian Pembelian</string>
    <string name="empty" />
    <string name="txt_title_add_sale">Menambah Penjualan</string>
    <string name="txt_warehouse">Gudang</string>
    <string name="txt_all_warehouse">Semua Gudang</string>
    <string name="txt_choose_warehouse">Pilih Gudang</string>
    <string name="txt_customer">Nama Pelanggan</string>
    <string name="txt_choose_customer">Pilih Customer/Toko</string>
    <string name="txt_product">Produk</string>
    <string name="txt_add_product">Tambah Produk</string>
    <string name="txt_delivery_address">Alamat Pengiriman</string>
    <string name="txt_date_sale">Tanggal Penjualan</string>
    <string name="txt_choose_date">Pilih tanggal</string>
    <string name="txt_biler">Penagih</string>
    <string name="txt_total">Jumlah</string>
    <string name="txt_discount">Diskon (Rupiah)</string>
    <string name="txt_delivery_fee">Biaya Pengiriman</string>
    <string name="txt_sale_status">Status Penjualan</string>
    <string name="txt_payment_status">Status Pembayaran</string>
    <string name="txt_purchase_status">Status Pembelian</string>
    <string name="txt_sale_note">Catatan Penjualan</string>
    <string name="txt_add">Tambah</string>
    <string name="txt_copy">Salin</string>
    <string name="txt_delivery_list">Daftar Pengiriman</string>
    <string name="txt_payment_list">Daftar Pembayaran</string>
    <string name="txt_logout">Keluar</string>
    <string name="txt_price_unit">Satuan Harga</string>
    <string name="txt_edit">Ubah</string>
    <string name="txt_sub_total">Sub Total</string>
    <string name="txt_price">Harga</string>
    <string name="txt_sell_price">Harga Jual</string>
    <string name="txt_cost">Harga Beli</string>
    <string name="txt_delivery_status">Status Pengiriman</string>
    <string name="txt_do_number">No DO</string>
    <string name="txt_so_number">No SO</string>
    <string name="txt_quantity">Kuantitas</string>
    <string name="txt_quantity_booking">Kuantitas Pemesanan</string>
    <string name="txt_nominal">Nominal</string>
    <string name="txt_driver_name">Nama Pengemudi</string>
    <string name="txt_date">Tanggal</string>
    <string name="txt_trx_number">No Transaksi</string>
    <string name="txt_booking_id">ID Pemesanan</string>
    <string name="txt_booking_status">Status Pemesanan</string>
    <string name="txt_booking_date">Tanggal Pemesanan</string>
    <string name="txt_see_detail">Lihat Rincian</string>
    <string name="txt_action_arrow"><![CDATA[>>>]]></string>
    <string name="txt_receive">Terima</string>
    <string name="txt_delivery_total_qty">Jumlah Kirim</string>
    <string name="txt_payment_detail">Detail Pembayaran</string>
    <string name="txt_reference_number">No Referensi</string>
    <string name="txt_payment_type">Jenis Pembayaran</string>
    <string name="txt_note">Catatan</string>
    <string name="txt_delivery_detail">Detail Pengiriman</string>
    <string name="txt_delivery_number">No Pengiriman</string>
    <string name="txt_status">Status</string>
    <string name="txt_from">Dari</string>
    <string name="txt_to">Kepada</string>
    <string name="txt_detail">Rincian</string>
    <string name="txt_pp_number">No PP</string>
    <string name="txt_pp_date">Tanggal PP</string>
    <string name="txt_booking_number">No Pemesanan</string>
    <string name="txt_booking_type">Jenis Pemesanan</string>
    <string name="txt_spj_number">No SPJ</string>
    <string name="txt_spj_date">Tanggal SPJ</string>
    <string name="txt_police_number">No Polisi</string>
    <string name="txt_plant_code">Kode Pabrik</string>
    <string name="txt_code">Kode</string>
    <string name="txt_plant_name">Nama Pabrik</string>
    <string name="txt_add_payment">Menambah Pembayaran</string>
    <string name="txt_payment_cash">Tunai</string>
    <string name="txt_other">Lainnya</string>
    <string name="txt_bank">Bank</string>
    <string name="txt_total_idr">Jumlah (Rp)</string>
    <string name="txt_action_add_payment">Tambah Pembayaran</string>
    <string name="txt_purchase_create">Membuat Pembelian</string>
    <string name="txt_purchases">Pembelian</string>
    <string name="txt_initial_price_idr">Harga Awal (Rp)</string>
    <string name="txt_qty">Qty</string>
    <string name="txt_brand">Merek</string>
    <string name="txt_new_price_idr">Harga Baru (Rp)</string>
    <string name="txt_add_delivery">Menambah Pengiriman</string>
    <string name="txt_being_packed">Sedang Dikemas</string>
    <string name="txt_in_shipping">Mengirim</string>
    <string name="txt_in_shipping_delivery">Dalam Pengiriman</string>
    <string name="txt_already_received">Sudah Diterima</string>
    <string name="txt_sales_reference_numbers">Referensi Nomor Penjualan</string>
    <string name="txt_hint_example_sales_number">SALE/2020/02/0001</string>
    <string name="txt_hint_example_delivery_number">DO/2020/02/0001</string>
    <string name="txt_posted_by">Dikirim oleh</string>
    <string name="txt_received_by">Diterima oleh</string>
    <string name="txt_customer_name">Nama Pelanggan</string>
    <string name="txt_customer_address">Alamat Pelanggan</string>
    <string name="txt_action_send_it">Kirim</string>
    <string name="txt_distributor">Distributor</string>
    <string name="txt_order_discounts">Diskon Pesanan (Rp)</string>
    <string name="txt_get_paid_idr">Dibayar (Rp)</string>
    <string name="txt_final_amount_idr">Jumlah Akhir (Rp)</string>
    <string name="txt_so_date">Tanggal SO</string>
    <string name="txt_order_type">Tipe Order</string>
    <string name="txt_type">Tipe</string>
    <string name="txt_image_search_product">image search product</string>
    <string name="txt_serial_number">Nomor Serial</string>
    <string name="txt_unit">Satuan</string>
    <string name="txt_net_unit_price">Harga Satuan Bersih</string>
    <string name="txt_product_tax">Pajak Produk</string>
    <string name="txt_ordered">Dipesan</string>
    <string name="txt_term_of_payment">Jangka Waktu Pembayaran</string>
    <string name="txt_due_date">Jatuh Tempo</string>
    <string name="txt_employee_records">Catatan Pegawai</string>
    <string name="txt_image_truck">image truck</string>
    <string name="txt_image_document">image document</string>
    <string name="txt_image_cement">image cement</string>
    <string name="txt_image_plus">image plus</string>
    <string name="txt_image_minus">image minus</string>
    <string name="txt_image_arrow_right">image arrow right</string>
    <string name="txt_image_store">image store</string>
    <string name="txt_image_building">image building</string>
    <string name="txt_image_person">image person</string>
    <string name="txt_image_warehouse">image warehouse</string>
    <string name="txt_icon_product">icon product</string>
    <string name="txt_icon_mark">mark</string>
    <string name="txt_icon_calendar">icon calendar</string>
    <string name="txt_icon_biller">icon biller</string>
    <string name="txt_icon_warehouse">icon warehouse</string>
    <string name="txt_image_avatar">image avatar</string>
    <string name="conDes">image</string>
    <string name="txt_sales">Penjualan</string>
    <string name="txt_delivery">Pengiriman</string>
    <string name="txt_master_data">Master</string>
    <string name="txt_action_swipe_layout">Tarik ke bawah untuk memuat ulang</string>
    <string name="txt_nol_total_rupiah">Rp0</string>
    <string name="title_activity_edit_sale">EditSaleActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_edit_penjualan">Edit Penjualan</string>
    <string name="txt_reason_edit_sale">Alasan edit/cancel Order</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_syncron">Syncron</string>
    <string-array name="sorting_type">
        <item>Kecil > Besar</item>
        <item>Besar > Kecil</item>
    </string-array>
    <string name="txt_warning_access_denied">Tidak diizinkan akses menu ini.</string>
    <string name="title_activity_customer_detail">CustomerDetailActivity</string>
    <string name="txt_detail_customer">Detail Pelanggan</string>
    <string name="txt_store_name">Nama Toko</string>
    <string name="txt_customer_group">Kelompok Pelanggan</string>
    <string name="txt_npwp">NPWP</string>
    <string name="txt_deposit">Deposit</string>
    <string name="txt_point_customer">Point Pelanggan</string>
    <string name="txt_email">Email</string>
    <string name="txt_telp">Telp</string>
    <string name="txt_search_for">Telusuri </string>
    <string name="txt_upload_file">File Untuk Upload</string>
    <string name="txt_district">Kabupaten/Kota</string>
    <string name="txt_province">Provinsi</string>
    <string name="txt_action_cancel">Batal</string>
    <string name="txt_action_save">Simpan</string>
    <string name="txt_first_name">Nama Depan</string>
    <string name="txt_last_name">Nama Belakang</string>
    <string name="txt_gender">Jenis Kelamin</string>
    <string name="txt_helper_max_text">Maksimal 30 Karakter</string>
    <string name="txt_male">Laki-Laki</string>
    <string name="txt_female">Perempuan</string>
</resources>