<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginLeft="@dimen/standard_margin"
            android:text="@string/txt_action_cancel"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/main_blue" />

        <TextView
            android:id="@+id/tv_title_bottom_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#676767"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:drawableStart="@android:drawable/ic_menu_save"
            android:drawableLeft="@android:drawable/ic_menu_save"
            android:drawableTint="@color/main_red"
            android:gravity="center"
            android:text="@string/txt_action_save"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/main_red" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/et_top_margin"
        android:layout_weight="0"
        android:background="@color/colorBlack" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/et_top_margin"
                android:layout_marginTop="@dimen/et_top_margin"
                android:layout_marginRight="@dimen/et_top_margin"
                app:helperText="@string/txt_helper_max_text">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_profile_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_layout_height_default"
                    android:hint="@string/txt_first_name"
                    android:paddingStart="@dimen/et_top_margin"
                    android:paddingEnd="@dimen/et_top_margin" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/et_top_margin"
                android:layout_marginTop="@dimen/et_top_margin"
                android:layout_marginRight="@dimen/et_top_margin"
                app:helperText="@string/txt_helper_max_text">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_profile_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_layout_height_default"
                    android:hint="@string/txt_last_name"
                    android:paddingStart="@dimen/et_top_margin"
                    android:paddingEnd="@dimen/et_top_margin" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/layout_delivery_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_title_sales_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_title_edit_profile"
                    android:layout_marginTop="@dimen/et_top_margin"
                    android:layout_marginRight="@dimen/margin_title_edit_profile"
                    android:text="@string/txt_gender"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorTittleInput"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radio_group_delivery_status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tv_title_sales_status"
                    android:layout_marginLeft="@dimen/et_top_margin"
                    android:layout_marginRight="@dimen/et_top_margin"
                    android:layout_marginBottom="@dimen/et_top_margin"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbtn_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_male" />

                    <RadioButton
                        android:id="@+id/rbtn_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_female" />
                </RadioGroup>

            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_action_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_bottom_sheet"
        android:layout_margin="@dimen/standard_margin"
        android:layout_weight="0"
        android:background="@color/main_green"
        android:text="@string/txt_action_save"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white" />

</LinearLayout>